# odd_ratio_linfit

./: .gitignore  CITATION.cff  LICENSE  README.md  demo.py  pyproject.toml
docs/: method_description.tex  odd_ratio_linfit_paper.tex
odd_ratio_fits/: __init__.py  core.py
odd_ratio_linfit/: __init__.py  core.py
tests/: test_core.py
